Bug 449180 - QML Cover Switch and Flip Switch effects has low fps
Summary: QML Cover Switch and Flip Switch effects has low fps
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Task Switchers (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2022-01-26 02:32 UTC by Samuel Reddy
Modified: 2022-07-12 15:13 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Reddy 2022-01-26 02:32:40 UTC
SUMMARY:
The new QML Cover and Flip switch effects, when used as the task switcher, have low fps, which makes the animation not very smooth.

STEPS TO REPRODUCE
1. In settings, go to Workspace/Window Management/Task Switcher
2. Change the task switcher from Breeze to cover or flip switch
3. Use the shortcut to activate the task manager(alt+tab)
4. Laggy animation

OBSERVED RESULT:
The animation for the cover switch and flip switch effects is laggy

EXPECTED RESULT:
The cover and flip switch effects should be smooth.

SOFTWARE/OS VERSIONS:
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Kernel Version: 5.16.2-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × AMD Ryzen 5 3450U with Radeon Vega Mobile Gfx
Memory: 5.7 GiB of RAM
Graphics Processor: AMD Radeon Vega 8 Graphics
Comment 1 Ismael Asensio 2022-06-27 20:52:16 UTC
On some simple tests I've done (using the showFPS effect) it seems that the a high FPS loss (~60->30) happens when the "show highlighted window" option is enabled, which would point to that specific effect more than to the switchers themselves. 

Disabling  this option, there's also a FPS reduction, but much less aggressive (to ~45-50 FPS on my intel integrated GPU).

This happens also on other task switchers (for instance, thumbnails), although it is more noticeable for cover/flip because the reduction in FPS can make the animations lag.

I wonder if, as a mitigation, the effect could be optionally disabled for fullscreen switchers, even if the user marks the option.

I'll wait for confirmation of this before moving this to kwin/effects-various
Comment 2 Nate Graham 2022-06-28 18:55:27 UTC
I can confirm that. Disabling "Show selected window" for fullscreen task switchers makes sense to me, since otherwise KWin is doing extra work that just gets thrown away, impacting performance.
Comment 3 Bug Janitor Service 2022-07-02 23:45:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2603
Comment 4 Ismael Asensio 2022-07-03 17:07:53 UTC
Git commit 3c5c079aa58b8c0cdf8ae2bf9fa8f01d2c53407f by Ismael Asensio.
Committed on 03/07/2022 at 16:51.
Pushed by iasensio into branch 'master'.

TabBox: Do not highlight selected window for fullscreen switchers

This helps improving performance on those effects, where the
highlighted window is not even shown.
FIXED-IN: 5.25.3

M  +15   -4    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/3c5c079aa58b8c0cdf8ae2bf9fa8f01d2c53407f
Comment 5 Ismael Asensio 2022-07-03 18:10:50 UTC
Git commit 034e99ba0ca852a047a2b26b8fb3d373afe2ec51 by Ismael Asensio.
Committed on 03/07/2022 at 18:10.
Pushed by iasensio into branch 'Plasma/5.25'.

TabBox: Do not highlight selected window for fullscreen switchers

This helps improving performance on those effects, where the
highlighted window is not even shown.
FIXED-IN: 5.25.3


(cherry picked from commit 3c5c079aa58b8c0cdf8ae2bf9fa8f01d2c53407f)

M  +15   -4    src/tabbox/tabboxhandler.cpp

https://invent.kde.org/plasma/kwin/commit/034e99ba0ca852a047a2b26b8fb3d373afe2ec51
Comment 6 Patrick Silva 2022-07-12 15:13:36 UTC
The animation is still laggy for both task switchers on my system after update to Plasma 5.25.3.

Operating System: Arch Linux
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland