TabBox: Do not highlight selected window for fullscreen switchers

This helps improving performance on those effects, where the
highlighted window is not even shown.

BUG: 449180
FIXED-IN: 5.25.3


(cherry picked from commit 3c5c079aa58b8c0cdf8ae2bf9fa8f01d2c53407f)